--- a/events/templates/events/event.html
+++ b/events/templates/events/event.html
@@ -97,8 +97,14 @@
                         <div class="col-md-5 col-md-offset-1">
                             <h2><span class="glyphicon glyphicon-user"></span> Mentors</h2>
                             {% for mentor in event.mentors.all %}
-                            <h3>{{mentor.first_name}} {{mentor.last_name}} {%if event.mentor.url %}<small><span class="glyphicon glyphicon-link"></span> <a href="{{event.mentor.url}}">{{mentor.url}}</a></small>{% endif %}</h3>
-                            <p>{{mentor.blurb|md|safe}}</p>
+                            {% if mentor.user %}
+                                <h3>{{mentor.user.first_name}} {{mentor.user.last_name}} {%if mentor.user.url %}<small><span class="glyphicon glyphicon-link"></span> <a href="{{mentor.user.url}}">{{mentor.user.url}}</a></small>{% endif %}</h3>
+                                <p>{{mentor.user.blurb|md|safe}}</p>
+                            {% else %}
+                                <h3>{{mentor.first_name}} {{mentor.last_name}} {%if event.mentor.url %}<small><span class="glyphicon glyphicon-link"></span> <a href="{{event.mentor.url}}">{{mentor.url}}</a></small>{% endif %}</h3>
+                                <p>{{mentor.blurb|md|safe}}</p>
+                            {% endif %}
+
                             {% endfor %}
                         </div>
                          <div class="col-md-5">
