added link to call for mentors form

--- a/templates/codinggrace_django/about.html
+++ b/templates/codinggrace_django/about.html
@@ -56,11 +56,14 @@
 
     <div class="row" id="chapter">
         <div class="col-md-6">
-            <h2 >CHAPTERS</h2>
+            <h2>CHAPTERS</h2>
             <p>
             Currently Coding Grace is in <strong><a href="/chapters/Dublin">DUBLIN</a></strong>, keep an eye out as we have another chapter in Ireland coming on board soon.
             </p>
-            <p>If you are interested in running Coding Grace in your local area, please feel free to drop us an email.
+            <p>If you are interested in running Coding Grace in your local area, please feel free to drop us an email.</p>
+
+            <h2>CALL FOR MENTORS</h2>
+            <p>You can register your interest in mentoring at our workshops via [this form](https://docs.google.com/forms/d/12XbtEtgY_V1quYNgD3SHMPcXB2kDiNHzRl7FvVIaISc/viewform?usp=send_form).</p>
         </div>
         <div class="col-md-6">
             <a name="contact"></a>
