--- a/templates/codinggrace_django/about.html
+++ b/templates/codinggrace_django/about.html
@@ -63,7 +63,7 @@
             <p>If you are interested in running Coding Grace in your local area, please feel free to drop us an email.</p>
 
             <h2>CALL FOR MENTORS</h2>
-            <p>You can register your interest in mentoring at our workshops via [this form](https://docs.google.com/forms/d/12XbtEtgY_V1quYNgD3SHMPcXB2kDiNHzRl7FvVIaISc/viewform?usp=send_form).</p>
+            <p>You can register your interest in mentoring at our workshops via <a href="https://docs.google.com/forms/d/12XbtEtgY_V1quYNgD3SHMPcXB2kDiNHzRl7FvVIaISc/viewform?usp=send_form">this form</a>.</p>
         </div>
         <div class="col-md-6">
             <a name="contact"></a>
