Add missing div tag

--- a/news/templates/news/article.html
+++ b/news/templates/news/article.html
@@ -27,6 +27,7 @@
 				</section>
 				<section id="disqus">
                 {% verbatim %}
+                    <div id="disqus_thread"></div>
                     <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
                      <script type="text/javascript">
                         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
