added disqus to the event page as well

--- a/events/templates/events/event.html
+++ b/events/templates/events/event.html
@@ -64,6 +64,12 @@
             </div>
         </div>
 
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+                {% include "disqus_common.html" %}
+            </div>
+        </div>
+
         {% if event.faq %}
         <div class="row event" id="faq">
             <div class="col-md-10 col-md-offset-1">
