--- a/templates/codinggrace_django/about.html
+++ b/templates/codinggrace_django/about.html
@@ -62,7 +62,7 @@
                     <div class="caption">
                         <h2><span class="glyphicon glyphicon-map-marker"></span> Chapters</h2>
                         <p>
-                            Currently Coding Grace is in <strong><a href="/chapters/Dublin">DUBLIN</a></strong>, keep an eye out as we have another chapter in Ireland coming on board soon.
+                            Currently Coding Grace is in <strong><a href="/chapters/dublin">DUBLIN</a></strong>, keep an eye out as we have another chapter in Ireland coming on board soon.
                         </p>
                          <p>
                             If you are interested in running Coding Grace in your local area, please feel free to drop us an email.
