--- a/events/templates/events/event.html
+++ b/events/templates/events/event.html
@@ -31,6 +31,8 @@
                 {% endif %}
 
                 <h2>Workshop details</h2>
+                <h4>EUR{{event.cost}}</h4>
+
                 {{event.description|md|safe}}
 
 
