--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4">
-                    Coding Grace 2014 ~ <a href="https://twitter.com/codinggrace">@codinggrace</a> ~ <a href="https://www.facebook.com/pages/Coding-Grace/501098363273457">Facebook</a>
+                    Coding Grace 2014 ~ <a href="https://twitter.com/codinggrace">@codinggrace</a> ~ <a href="https://www.facebook.com/pages/Coding-Grace/501098363273457">Facebook</a> ~ <a href="/colophon/">Colophon</a>
                 </div>
             </div>
         </div>
