--- a/templates/codinggrace_django/index.html
+++ b/templates/codinggrace_django/index.html
@@ -10,7 +10,8 @@
         {% for event in events_list %}
         <div class="col-md-2"></div>
         <div class="col-md-10">
-            <h1><a href="{% url 'events:event_detail' event.slug event.id %}">{{event.title}}</a> &nbsp;&nbsp;<span class="glyphicon glyphicon-time"></span> {{ event.start_datetime|timeuntil }} left</h1>
+            <h1><a href="{% url 'events:event_detail' event.slug event.id %}">{{event.title}}</a></h1>
+            <h1><span class="glyphicon glyphicon-time"></span> {{ event.start_datetime|timeuntil }} left</h1>
             <div class="row">
                 <section class="col-md-8">
                     {% for level in event.level_type.all %}{{ level }}{% endfor %} <span class="glyphicon glyphicon-play"></span> <span class="glyphicon glyphicon-map-marker"></span> <a href="/chapters/{{event.location.city}}">{{event.location.city|title}}</a> <span class="glyphicon glyphicon-play"></span>  <span class="glyphicon glyphicon-calendar"></span> <span class="">{{event.start_datetime}}</span>  <span class="glyphicon glyphicon-play"></span> <span class="glyphicon glyphicon-euro"></span><span class="">{{event.cost}}</span>
