--- a/templates/codinggrace_django/resources/general.html
+++ b/templates/codinggrace_django/resources/general.html
@@ -1,28 +1,41 @@
 <h1 id="general">General</h1>
 <h2 id="commandline">Command Line</h2>
 <h3>Windows</h3>
-<p>If you have Windows 7 onwards, fire [Powershell](http://technet.microsoft.com/en-us/library/dd315244.aspx) up.</p>
-<p>If you have an older Windows OS, get [Cygwin](http://www.cygwin.com/)</p>
+<div>
+    <ul>
+        <li>If you have Windows 7 onwards, fire <a href="http://technet.microsoft.com/en-us/library/dd315244.aspx">Powershell</a> up.</li>
+        <li>If you have an older Windows OS, get <a href="http://www.cygwin.com/">Cygwin</a></li>
+    </ul>
+</div>
+<div>
+    If you have Windows 7 onwards, fire <a href="http://technet.microsoft.com/en-us/library/dd315244.aspx">Powershell</a> up.
+</div>
+
 
 <h3>Linux / MacOSX</h3>
-<p>You are all set, just open Terminal.</p>
+<div>You are all set, just open Terminal.</div>
 
 <h3>Tutorials</h3>
-<ul>
-    <li><a href="http://cli.learncodethehardway.org/book/">http://cli.learncodethehardway.org/book/</a></li>
-</ul>
+<div>
+    <ul>
+        <li><a href="http://cli.learncodethehardway.org/book/">http://cli.learncodethehardway.org/book/</a></li>
+    </ul>
+</div>
 
 <h2 id="ide">IDEs and Text Editors</h2>
-<p>IDE stands for "Integrated development environment". It includes an environment that included an editor,build tools, debugging. Some IDEs also come with code completion (type a built-in function and hit tab to complete the function with tips on what parameters it takes. Others also allow people to write custom plugins or extensions to make like easier like source control integration, additional syntax highlighting, and more.</p>
+<div>IDE stands for "Integrated development environment". It includes an environment that included an editor,build tools, debugging. Some IDEs also come with code completion (type a built-in function and hit tab to complete the function with tips on what parameters it takes. Others also allow people to write custom plugins or extensions to make like easier like source control integration, additional syntax highlighting, and more.</div>
 
 <h3>Some recommended IDEs</h3>
-<ul>
-    <li><a href="http://www.jetbrains.com/pycharm/">PyCharm</a> by JetBrains (All Platforms)</li>
-    <li><a href="http://www.wingware.com/">Wingware</a> (All Platforms)</li>
-</ul>
-<p>If you don't want to go near IDEs and are happy with text editors and working in command line</p>
-<ul>
-    <li><a href="http://www.sublimetext.com/">Sublime Text</a> (All Platforms)</li>
-    <li><a href="http://macromates.com/">TextMate</a>  (Mac only)</li>
-    <li>More to come...</li>
-</ul>
+<div>
+    <ul>
+        <li><a href="http://www.jetbrains.com/pycharm/">PyCharm</a> by JetBrains (All Platforms)</li>
+        <li><a href="http://www.wingware.com/">Wingware</a> (All Platforms)</li>
+    </ul>
+</div>
+<div>If you don't want to go near IDEs and are happy with text editors and working in command line:
+    <ul>
+        <li><a href="http://www.sublimetext.com/">Sublime Text</a> (All Platforms)</li>
+        <li><a href="http://macromates.com/">TextMate</a>  (Mac only)</li>
+        <li>More to come...</li>
+    </ul>
+</div>
