--- a/templates/codinggrace_django/resources/python.html
+++ b/templates/codinggrace_django/resources/python.html
@@ -1,5 +1,5 @@
 <h2 id="python">Where to begin...?</h2>
-<p>
+<div>
     Curious about all this talk about python and you want to try it out. You don't need to have programming knowledge to learn Python.
     <ol>
         <li>Head over to <a href="https://www.python.org/">python.org</a> and click on the yellow button to launch the interactive Python shell.</li>
@@ -16,11 +16,13 @@
             </ul>
         </li>
     </ol>
-</p>
+</div>
 
 <h2>Useful tools and utilities:</h2>
-<ul>
-    <li><a href="#commandline">Command Line</a> - You will end up turning to command line in your terminal/console and knowing a few basic command lines is really handy knowledge. It's quick and saves time.</li>
-    <li><a href="#sourcecontrol">Source Control</a> - This is pretty essential nowadays regardless if you are working on your own project, with small/huge teams.</li>
-    <li>pip and virtualenv</li>
-</ul>
+<div>
+    <ul>
+        <li><a href="#commandline">Command Line</a> - You will end up turning to command line in your terminal/console and knowing a few basic command lines is really handy knowledge. It's quick and saves time.</li>
+        <li><a href="#sourcecontrol">Source Control</a> - This is pretty essential nowadays regardless if you are working on your own project, with small/huge teams.</li>
+        <li>pip and virtualenv</li>
+    </ul>
+</div>
