--- a/templates/codinggrace_django/resources/source_control.html
+++ b/templates/codinggrace_django/resources/source_control.html
@@ -1,36 +1,40 @@
 <h1 id="sc">Source Control</h1>
 <h2>What is it? And why do I need it?</h2>
-<p>Source control is pretty important nowadays from working on your own personal project to team-based projects to
+<div>
+    Source control is pretty important nowadays from working on your own personal project to team-based projects to
 interacting with open-source projects. It's a necessary skill that all who writes code should know. It will solve
 a lot of headaches and at least certain doom (might be exaggerated, but it feels like that at the time) and knowing
-that you can revert changes, it's quite a life-saver.</p>
+that you can revert changes, it's quite a life-saver.
+</div>
 
-<p>
+<div>
     If you know Git or Mercurial and want to know what the difference is between them, here's a handy reference page:
     <ul>
         <li><a href="https://github.com/sympy/sympy/wiki/Git-hg-rosetta-stone">Git hg Rosetta Stone</a></li>
     </ul>
-</p>
+</div>
 
 <h2>Recommended Distributed Version Control System</h2>
 
 <h3 id="git">Git</h3>
-<p>After downloading <a href="http://git-scm.com/">Git</a>, go through their <a href="http://git-scm.com/docs/gittutorial">tutorial</a>.</p>
-<p>
+<div>
+    After downloading <a href="http://git-scm.com/">Git</a>, go through their <a href="http://git-scm.com/docs/gittutorial">tutorial</a>.
+</div>
+<div>
     Other references:
     <ul>
         <li><a href="http://git-scm.com/docs">Git's own cheatsheets</a></li>
     </ul>
-</p>
+</div>
 
 <h3 id="hg">Mercurial (hg)</h3>
-<p>
+<div>
     After downloading Mercurial, go through Joel Spoelsky's friendly <a href="http://hginit.com/">tutorial</a>.
-<p>
-<p>
+</div>
+<div>
     Other references:
     <ul>
         <li><a href="http://mercurial.selenic.com/wiki/Tutorial">Mercurial's own tutorial</a></li>
         <li><a href="http://mercurial.selenic.com/wiki/QuickReferenceCardsAndCheatSheets">Mercurial's own cheatsheets</a></li>
     </ul>
-</p>
+</div>
