--- a/templates/codinggrace_django/resources.html
+++ b/templates/codinggrace_django/resources.html
@@ -5,7 +5,8 @@
 {% load staticfiles %}
 
 {% block content %}
-<div class="container-fluid">
+<h1 id="resources" class="text-center">Resources</h1>
+<div class="container-fluid resources">
     <div class="row">
         <div class="col-md-2">
             <div class="panel panel-default">
