added two fonts from typekit

--- a/events/templates/events/event.html
+++ b/events/templates/events/event.html
@@ -15,7 +15,7 @@
 {% load my_md %}
 
 {% block content %}
-<h1 id="events" class="text-center">{{event.title}}</h1>
+<h1 id="events" class="text-center tk-cooper-black-std">{{event.title}}</h1>
 <div class="container-fluid">
     {% if event %}
 
