--- a/events/templates/events/index.html
+++ b/events/templates/events/index.html
@@ -15,7 +15,7 @@
 {% block content %}
 
 
-<h1 id="events" class="text-center">Current Events</h1>
+<h1 id="events" class="text-center tk-cooper-black-std">Current Events</h1>
 <div class="container-fluid">
 
     <div class="row events">
@@ -58,7 +58,7 @@
     </div>
 </div>
 
-<h1 id="past-events" class="text-center">Past Events</h1>
+<h1 id="past-events" class="text-center tk-cooper-black-std">Past Events</h1>
 <div class="container-fluid">
     <div class="row">
     {% for year_event in past_events %}
