--- a/news/templates/news/all_articles.html
+++ b/news/templates/news/all_articles.html
@@ -30,7 +30,7 @@
 			{% include 'news/tweets.html' %}
 		</div>
 		<div class="col-md-8 text-center ">
-			<h1 id="news" >{{page_title}}</h1>
+			<h1 id="news" class="tk-cooper-black-std">{{page_title}}</h1>
 			{% if news_items %}
 
 			<ul class="list-group">
