--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -14,7 +14,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
-			<h1 id="news" class="text-center">LATEST NEWS</h1>
+			<h1 id="news" class="text-center tk-cooper-black-std">LATEST NEWS</h1>
 		</div>
 		<div class="col-md-2 news">
 			<div class="panel-group" id="accordion">
@@ -85,7 +85,7 @@
 	{% if all_news %}
 	<div class="row post-news">
 		<div class="col-md-12">
-			<h1 class="text-center more_stuff"><a href="all_articles">MORE ARTICLES <span class="glyphicon glyphicon-circle-arrow-right"></span></a></h1>
+			<h1 class="text-center more_stuff tk-cooper-black-std"><a href="all_articles">MORE ARTICLES <span class="glyphicon glyphicon-circle-arrow-right"></span></a></h1>
 		</div>
 	</div>
 	{% endif %}
