--- a/templates/codinggrace_django/about.html
+++ b/templates/codinggrace_django/about.html
@@ -2,7 +2,7 @@
     <div class="row about">
         <div class="col-md-12 col-xs-12">
             <a name="about"></a>
-            <h1 class="text-center">ABOUT</h1>
+            <h1 class="text-center tk-cooper-black-std">ABOUT</h1>
         </div>
         <div class="col-md-7">
             <p>
