--- a/templates/codinggrace_django/codeofconduct.html
+++ b/templates/codinggrace_django/codeofconduct.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row codeofconduct">
         <a name="codeofconduct"></a>
-        <h1 class="text-center">CODE OF CONDUCT</h1>
+        <h1 class="text-center tk-cooper-black-std">CODE OF CONDUCT</h1>
 
         <div class="col-md-6">
             <h2>TL;DR</h2>
