--- a/templates/codinggrace_django/codeofconduct_longer.html
+++ b/templates/codinggrace_django/codeofconduct_longer.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container-fluid" id="coc">
     <div class="row conduct-head">
-        <h1 class="text-center">CODE OF CONDUCT</h1>
+        <h1 class="text-center tk-cooper-black-std">CODE OF CONDUCT</h1>
     </div>
     <div class="row" id="full">
         <div class="col-md-10 col-md-offset-1">
