--- a/news/templates/news/article.html
+++ b/news/templates/news/article.html
@@ -13,10 +13,10 @@
 {% block content %}
 <div class="container-fluid article">
 	<div class="row ">
-		<div class="col-md-8 col-md-offset-2">
+		<div class="col-md-8 col-md-offset-2 tk-lemonde-journal">
 		{% if article %}
 			<article>
-				<h1 class="text-center">{{ article.title }}</h1>
+				<h1 class="text-center tk-cooper-black-std">{{ article.title }}</h1>
 				<section>
 					<h4 class="post-author">By {{ article.author }} in {{ article.location}} <small>{{ article.published }}</small></h4>
                     {% if article.event %}
