--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+
+    <script type="text/javascript" src="//use.typekit.net/kal4hup.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     {% block extrajs %} {% endblock %}
 </body>
 </html>
