--- a/templates/codinggrace_django/resources.html
+++ b/templates/codinggrace_django/resources.html
@@ -5,7 +5,7 @@
 {% load staticfiles %}
 
 {% block content %}
-<h1 id="resources" class="text-center">Resources</h1>
+<h1 id="resources" class="text-center tk-cooper-black-std">Resources</h1>
 <div class="container-fluid resources">
     <div class="row">
         <div class="col-md-2">
