--- a/templates/codinggrace_django/colophon.html
+++ b/templates/codinggrace_django/colophon.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div id="colophon">
-    <h1 class="text-center">Big <span class="glyphicon glyphicon-heart"></span>s to these projects</h1>
+    <h1 class="text-center tk-cooper-black-std">Big <span class="glyphicon glyphicon-heart"></span>s to these projects</h1>
     <div class="container-fluid" >
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
