--- a/templates/codinggrace_django/colophon.html
+++ b/templates/codinggrace_django/colophon.html
@@ -14,6 +14,7 @@
                     <ul>
                         <li>This site is written in <a href="http://djangoproject.com">Django</a></li>
                         <li>Bootstrap with all the cool icons from <a href="http://glyphicons.com/">Glypicons</a></li>
+                        <li>Some fonts from the awesome <a href="https://typekit.com">Typekit</a></li>
                         <li>Hosted on <a href="http://heroku.com">Heroku</a></li>
                     </ul>
                 </section>
