--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
             <div class="col-md-2"></div>
             <div class="col-md-3 col-xs-4 ">
                 <ul class="nav nav-pills">
-                    <li {% if active == "home" %}class="active"{% endif %}><a href="/">Home</a></li>
+                    <li {% if active == "home" %}class="active"{% endif %}><a href="/"><span class="glyphicon glyphicon-home"></span> Home</a></li>
                     <li {% if active == "about" %}class="active"{% endif %}><a href="/#about">About</a></li>
                     <li {% if active == "events" %}class="active"{% endif %}><a href="/events/">Events</a></li>
                     <li {% if active == "news" %}class="active"{% endif %}><a href="/news/">News</a></li>
@@ -40,7 +40,11 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4">
-                    Coding Grace 2014 ~ <a href="https://twitter.com/codinggrace">@codinggrace</a> ~ <a href="https://www.facebook.com/pages/Coding-Grace/501098363273457">Facebook</a> ~ <a href="/colophon/">Colophon</a>
+                    Coding Grace 2014 |||||||| <a href="https://twitter.com/codinggrace">@codinggrace</a> |||| <a href="https://www.facebook.com/pages/Coding-Grace/501098363273457">Facebook</a>
+                </div>
+                <div class="col-md-4"></div>
+                <div class="col-md-4 text-right">
+                <span class="glyphicon glyphicon-info-sign"></span> <a href="/colophon/">Colophon</a> |||| <a href="/resources/">Resources</a>
                 </div>
             </div>
         </div>
