--- a/events/templates/events/index.html
+++ b/events/templates/events/index.html
@@ -2,6 +2,8 @@
 {% block title %}Events{% endblock %}
 
 {% load staticfiles %}
+{% load event_filters %}
+
 {% block extracss %}
 
 <link rel="stylesheet" href="{% static 'events/css/style.css' %}" />
@@ -68,15 +70,25 @@
         </div>
         {% for monthly_event in year_event.1 %}
             {% if monthly_event.1 %}
-            <div class="col-md-3">
-                <h3>{{monthly_event.0|capfirst}}</h3>
-                <ul>
-                    {% for event in monthly_event.1 %}
-                    {% url 'events:event_detail' slug=event.slug event_id=event.id as the_url %}
-                    <li><a href="{{ the_url }}">{{event.title}}</a> <small>({{event.location.city|title}})</small></li>
-                    {% endfor %}
-                </ul>
-            </div>
+
+                {% if forloop.counter|modulo:4 %}
+                <div class="row">
+                {% endif %}
+
+                    <div class="col-md-3">
+                        <h3>{{monthly_event.0|capfirst}}</h3>
+                        <ul>
+                            {% for event in monthly_event.1 %}
+                            {% url 'events:event_detail' slug=event.slug event_id=event.id as the_url %}
+                            <li><a href="{{ the_url }}">{{event.title}}</a> <small>({{event.location.city|title}})</small></li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+
+                {% if forloop.counter|modulo:4 %}
+                </div>
+                {% endif %}
+
             {% endif %}
 
         {% endfor %}
